# imu_plane

./: CMakeLists.txt  README.md  package.xml
description/: robot.urdf.xacro  robot_core.xacro
launch/: imu.launch.py  launch_plane.launch.py  rsp.launch.py
scripts/: imu_node.py  tf_broadcaster_imu.py
